--- a/CarStatApp/MVVM/View/FilterView.xaml
+++ b/CarStatApp/MVVM/View/FilterView.xaml
@@ -3,9 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CarStatAppUI.MVVM.View"
-             xmlns:viewModel="clr-namespace:CarStatAppUI.MVVM.ViewModel"
-             xmlns:valid="clr-namespace:CarStatAppUI.Core.Rules"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="900">
 
@@ -56,8 +53,7 @@
 
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Left"
                     VerticalAlignment="Center" Margin="0,50,0,0">
-            <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20" Style="{StaticResource NoiseTextBox}">
-            </TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20" Style="{StaticResource NoiseTextBox}"/>
             <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20"   Style="{StaticResource RangeTextBox}"/>
             <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20"   Style="{StaticResource TrunkTextBox}"/>
             <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20"   Style="{StaticResource MaxConsTextBox}"/>
