--- a/CarStatApp/MVVM/View/UploadView.xaml
+++ b/CarStatApp/MVVM/View/UploadView.xaml
@@ -41,27 +41,35 @@
                     <StackPanel Orientation="Vertical">
                         <TextBox Style="{StaticResource TextBoxHorsePower}"
                                  HorizontalAlignment="Center"
+                                 Name="horseTextBox"
                                  Margin="0,20,0,10"/>
                         <TextBox Style="{StaticResource TextBoxTorque}"
                                  HorizontalAlignment="Center"
+                                 Name="torqueTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleTransmission}"
                                  HorizontalAlignment="Center"
+                                 Name="transmissionTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxMaxSpeed}"
                                  HorizontalAlignment="Center"
+                                 Name="maxSpeedTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleNullToHundred}"
                                  HorizontalAlignment="Center"
+                                 Name="nulltohundredTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleTrankProducer}"
                                  HorizontalAlignment="Center"
+                                 Name="trunkProdTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleTrankAdac}"
                                  HorizontalAlignment="Center"
+                                 Name="trunkAdacTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleInteriorNoise}"
                                  HorizontalAlignment="Center"
+                                 Name="noiseTextBox"
                                  Margin="0,0,0,10"/>
                     </StackPanel>
                 </Grid>
@@ -76,27 +84,35 @@
                     <StackPanel Orientation="Vertical">
                         <TextBox Style="{StaticResource TextBoxStyleTankCapacity}"
                                  HorizontalAlignment="Center"
+                                 Name="tankCapTextBox"
                                  Margin="0,20,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleConsumptionProducer}"
                                  HorizontalAlignment="Center"
+                                 Name="consProdTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleConsumptionAdac}"
                                  HorizontalAlignment="Center"
+                                 Name="consAdacTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleConsumptionCity}"
                                  HorizontalAlignment="Center"
+                                 Name="consCityTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleConsumptionCountryRoad}"
                                  HorizontalAlignment="Center"
+                                 Name="consCountryTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleConsumptionHighWay}"
                                  HorizontalAlignment="Center"
+                                 Name="consHighWayTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleRangeAdac}"
                                  HorizontalAlignment="Center"
+                                 Name="rangeTextBox"
                                  Margin="0,0,0,10"/>
                         <TextBox Style="{StaticResource TextBoxStyleWeight}"
                                  HorizontalAlignment="Center"
+                                 Name="weightTextBox"
                                  Margin="0,0,0,10"/>
                     </StackPanel>
                 </Grid>
