--- a/CarStatApp/ResrouceDictionary/CarRecommStyle.xaml
+++ b/CarStatApp/ResrouceDictionary/CarRecommStyle.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:valid="clr-namespace:CarStatAppUI.Core.Rules">
-
+   
     <Style TargetType="{x:Type TextBox}" x:Key="NoiseTextBox">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
+                <ControlTemplate TargetType="{x:Type TextBoxBase}">
                     <Border CornerRadius="10"
                             Background="#F0A500"
                             Width="350" Height="40">
@@ -17,7 +17,7 @@
                                  VerticalAlignment="Center"
                                  Padding="5"
                                  Foreground="#4A3933"
-                                 x:Name="SearchBox"
+                                 x:Name="noiseTextBox"
                                  Validation.ErrorTemplate="{DynamicResource errorTemplate}">
                                 <TextBox.Text>
                                     <Binding Path="InteriorNoise" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
@@ -27,7 +27,6 @@
                                     </Binding>
                                 </TextBox.Text>
                             </TextBox>
-
                             <TextBlock IsHitTestVisible="False"
                                        Text="Min. Noise"
                                        VerticalAlignment="Center"
@@ -35,11 +34,10 @@
                                        Margin="10,0,0,0"
                                        Foreground="#4A3933"
                                        Grid.Column="1">
-
                                 <TextBlock.Style>
                                     <Style TargetType="TextBlock">
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
+                                            <DataTrigger Binding="{Binding Text, ElementName=noiseTextBox}" Value="">
                                                 <Setter Property="Visibility" Value="Visible"/>
                                             </DataTrigger>
                                         </Style.Triggers>
@@ -53,6 +51,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style TargetType="{x:Type TextBox}" x:Key="RangeTextBox">
         <Setter Property="Template">
             <Setter.Value>
