--- a/CarStatApp/ResrouceDictionary/TextBoxStlye.xaml
+++ b/CarStatApp/ResrouceDictionary/TextBoxStlye.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:valid="clr-namespace:CarStatAppUI.Core.Rules">
+                    xmlns:valid="clr-namespace:CarStatAppUI.Core.Rules"
+                    xmlns:y="clr-namespace:CarStatAppUI.MVVM.ViewModel">
 
     <Style TargetType="{x:Type TextBox}" x:Key="TextBoxStyleBrand">
         <Setter Property="Template">
@@ -9,7 +10,6 @@
                     <Border CornerRadius="10"
                             Background="#F0A500"
                             Width="250" Height="30">
-
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1"
@@ -40,7 +40,6 @@
                             </TextBlock>
                         </Grid>
                     </Border>
-
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -96,7 +95,6 @@
                     <Border CornerRadius="10"
                             Background="#F0A500"
                             Width="250" Height="30">
-
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1"
@@ -105,18 +103,18 @@
                                  VerticalAlignment="Center"
                                  Padding="5"
                                  Foreground="#4A3933"
-                                 x:Name="SearchBox"
+                                 x:Name="horseBox"
                                  Validation.ErrorTemplate="{DynamicResource errorTemplate}">
                                 <TextBox.Text>
-                                    <Binding Path="HorsePower" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
-                                        <Binding.ValidationRules>
+                                    <Binding Path="HorsePower" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay" NotifyOnValidationError="True">
+                                        <Binding.ValidationRules >
                                             <valid:textRule/>
                                         </Binding.ValidationRules>
                                     </Binding>
                                 </TextBox.Text>
                             </TextBox>
                             <TextBlock IsHitTestVisible="False"
-                                       Text="Horse Power"
+                                       Text="Horsepower"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        Margin="10,0,0,0"
@@ -125,7 +123,7 @@
                                 <TextBlock.Style>
                                     <Style TargetType="TextBlock">
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value="">
+                                            <DataTrigger Binding="{Binding Text, ElementName=horseBox}" Value="">
                                                 <Setter Property="Visibility" Value="Visible"/>
                                             </DataTrigger>
                                         </Style.Triggers>
