Disign and Data Access for Combo Boxes in UploadView

--- a/CarStatApp/MainWindow.xaml
+++ b/CarStatApp/MainWindow.xaml
@@ -19,8 +19,8 @@
     <Border Background="#4A3933" CornerRadius="10">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
 
